--- a/templates/projects/export.html
+++ b/templates/projects/export.html
@@ -18,7 +18,7 @@
 
                 <div class="col-sm-6">
                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='csv')}}" rel="nofollow">
-                        <div class="well">
+                        <div class="well well-link">
                             <i class="fa fa-file-excel-o fa-4x"></i>
                             <h3  class="margin-bottom-xs">Tasks</h3>
                         </div>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-sm-6">
                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='csv')}}" rel="nofollow">
-                        <div class="well">
+                        <div class="well well-link">
                             <i class="fa fa-file-excel-o fa-4x"></i>
                             <h3  class="margin-bottom-xs">Contributions</h3>
                         </div>
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='json')}}" rel="nofollow">
-                        <div class="well">
+                        <div class="well well-link">
                             <i class="fa fa-code fa-4x"></i>
                             <h3  class="margin-bottom-xs">Tasks</h3>
                         </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-sm-6">
                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='json')}}" rel="nofollow">
-                        <div class="well">
+                        <div class="well well-link">
                             <i class="fa fa-code fa-4x"></i>
                             <h3  class="margin-bottom-xs">Contributions</h3>
                         </div>
