--- a/templates/projects/presenters/basic.html
+++ b/templates/projects/presenters/basic.html
@@ -1,5 +1,5 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='basic')}}">
-    <div class="well">
+    <div class="well well-link">
         <h2><i class="fa fa-edit"></i> Basic</h2>
         <h3>This is the most basic template</h3>
     </div>
