--- a/templates/projects/presenters/image.html
+++ b/templates/projects/presenters/image.html
@@ -1,5 +1,5 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='image')}}">
-    <div class="well">
+    <div class="well well-link">
         <h2><i class="fa fa-picture-o"></i> Image</h2>
         <h3>Re-use the image pattern recognition template</h3>
     </div>
