--- a/templates/projects/presenters/map.html
+++ b/templates/projects/presenters/map.html
@@ -1,5 +1,5 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='map')}}">
-    <div class="well">
+    <div class="well well-link">
         <h3><i class="fa fa-globe"></i>Georeferencing</h3>
         <h3>Re-use the georeferencing template</h3>
     </div>
