--- a/templates/projects/presenters/video.html
+++ b/templates/projects/presenters/video.html
@@ -1,5 +1,5 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='video')}}">
-    <div class="well">
+    <div class="well well-link">
         <h2><i class="fa fa-film"></i> Video</h2>
         <h3>Re-use the video pattern recognition template</h3>
     </div>
