--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -18,7 +18,7 @@
             {% if (current_user.is_authenticated() and project.owner_id == current_user.id) or current_user.admin %}
             <div id="import_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.import_task', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-download fa-4x"></span>
                         <h3 class="margin-bottom-xs">Import Tasks</h3>
                     </div>
@@ -27,7 +27,7 @@
 
             <div id="export_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-upload fa-4x"></span>
                         <h3 class="margin-bottom-xs">Export Tasks</h3>
                     </div>
@@ -36,7 +36,7 @@
 
             <div id="autoimport_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.setup_autoimporter', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-cogs fa-4x"></span>
                         <h3 class="margin-bottom-xs">Auto-import Tasks</h3>
                     </div>
@@ -45,7 +45,7 @@
 
             <div id="task_presenter" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-edit fa-4x"></span>
                         <h3 class="margin-bottom-xs">Task Presenter</h3>
                     </div>
@@ -54,7 +54,7 @@
 
             <div id="task_browse" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.tasks_browse', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-list-alt fa-4x"></span>
                         <h3 class="margin-bottom-xs">Browse Tasks</h3>
                     </div>
@@ -63,7 +63,7 @@
 
             <div id="task_delete" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.delete_tasks', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-trash-o fa-4x"></span>
                         <h3 class="margin-bottom-xs">Delete Tasks</h3>
                     </div>
@@ -72,7 +72,7 @@
 
             <div id="task_redundancy" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-repeat fa-4x"></span>
                         <h3 class="margin-bottom-xs">Task Redundancy</h3>
                     </div>
@@ -81,7 +81,7 @@
 
             <div id="task_priority" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.task_priority', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-sort-numeric-asc fa-4x"></span>
                         <h3 class="margin-bottom-xs">Task Priority</h3>
                     </div>
@@ -90,7 +90,7 @@
 
             <div id="task_scheduler" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.task_scheduler', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-filter fa-4x"></span>
                         <h3 class="margin-bottom-xs">Task Scheduler</h3>
                     </div>
@@ -99,7 +99,7 @@
 
             <div id="delete_project" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-trash fa-4x"></span>
                         <h3 class="margin-bottom-xs">Delete Project</h3>
                     </div>
@@ -108,7 +108,7 @@
 
             <div id="project_details" class="col-sm-6 col-md-4">
                 <a href="{{ url_for('project.update', short_name = project.short_name) }}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-file-text-o fa-4x"></span>
                         <h3 class="margin-bottom-xs">Project Details</h3>
                     </div>
@@ -117,7 +117,7 @@
 
             <div id="audit_logs" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.auditlog', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-calendar fa-4x"></span>
                         <h3 class="margin-bottom-xs">Audit Logs</h3>
                     </div>
@@ -126,7 +126,7 @@
 
             <div id="publish" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.publish', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-thumbs-up fa-4x"></span>
                         <h3 class="margin-bottom-xs">Publish</h3>
                     </div>
@@ -137,7 +137,7 @@
             {% if "pybossa_analyst" in plugins %}
             <div id="rules" class="col-sm-6 col-md-4">
                 <a href="{{ url_for('analyst.rules', short_name=project.short_name) }}" rel="nofollow">
-                    <div class="well">
+                    <div class="well well-link">
                         <span class="fa fa-balance-scale fa-4x"></span>
                         <h3 class="margin-bottom-xs">Rules</h3>
                     </div>
