--- a/templates/projects/tasks/csv.html
+++ b/templates/projects/tasks/csv.html
@@ -1,5 +1,5 @@
 <a href="{{url_for(target, short_name=project.short_name, type='csv')}}" rel="nofollow">
-    <div class="well">
+    <div class="well well-link">
         <i class="fa fa-file-excel-o fa-4x"></i>
         <h3 class="margin-bottom-xs">CSV</h3>
     </div>
