--- a/templates/projects/tasks/epicollect.html
+++ b/templates/projects/tasks/epicollect.html
@@ -1,6 +1,6 @@
 <a href="{{url_for(target, short_name=project.short_name, type='epicollect')}}" rel="nofollow">
-    <div class="well">
+    <div class="well well-link">
         <i class="fa fa-plus-square-o fa-4x"></i>
-        <h3 class="margin-bottom-xs">EpiCollect Plus</h3> 
+        <h3 class="margin-bottom-xs">EpiCollect Plus</h3>
     </div>
 </a>
