--- a/templates/projects/tasks/gdocs-pdf.html
+++ b/templates/projects/tasks/gdocs-pdf.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-link">
     <h2><i class="fa fa-pencil"></i>Transcribing documents</h2>
     <h3>Re-use the PDF transcription tasks</h3>
     <p>
