--- a/templates/projects/tasks/gdocs-sound.html
+++ b/templates/projects/tasks/gdocs-sound.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-link">
     <h2><i class="fa fa-music"></i> Sound Pattern Recognition</h2>
     <h3>Re-use the SoundCloud tasks</h3>
     <p>
