--- a/templates/projects/tasks/gdocs.html
+++ b/templates/projects/tasks/gdocs.html
@@ -1,6 +1,6 @@
 <a href="{{url_for(target, short_name=project.short_name, type='gdocs')}}" rel="nofollow">
-    <div class="well">
+    <div class="well well-link">
         <i class="fa fa-google fa-4x"></i>
-        <h3 class="margin-bottom-xs">Google Docs Spreadsheet</h3> 
+        <h3 class="margin-bottom-xs">Google Docs Spreadsheet</h3>
     </div>
 </a>
