--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -567,12 +567,6 @@ thead {
 }
 
 .well {
-    transition: color 1s, box-shadow 1s;
-    -webkit-transition: color 1s, box-shadow 1s;
-    -moz-transition: color 1s, box-shadow 1s;
-    -ms-transition: color 1s, box-shadow 1s;
-    -o-transition: color 1s, box-shadow 1s;
-    text-align: center;
     background-color: #fff;
     color: #777;
     z-index: 1;
@@ -583,15 +577,24 @@ thead {
     -webkit-box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
     border: 1px solid #fff
-    height: 190px;
 }
 
-.well:hover {
+.well.well-link {
+    text-align: center;
+    height: 190px;
+    transition: color 1s, box-shadow 1s;
+    -webkit-transition: color 1s, box-shadow 1s;
+    -moz-transition: color 1s, box-shadow 1s;
+    -ms-transition: color 1s, box-shadow 1s;
+    -o-transition: color 1s, box-shadow 1s;
+}
+
+.well.well-link:hover {
     box-shadow: inset 0 0px 3px 1px rgba(200, 0, 0, 0.8);
     color: #BA0000
 }
 
-.well .btn-dash {
+.well.well-link .btn-dash {
     position: absolute;
     bottom: 40px;
     right: 40px
