--- a/templates/projects/tasks/flickr.html
+++ b/templates/projects/tasks/flickr.html
@@ -1,5 +1,5 @@
 <a href="{{url_for(target, short_name=project.short_name, type='flickr')}}" rel="nofollow">
-    <div class="well">
+    <div class="well well-link">
         <i class="fa fa-flickr fa-4x"></i>
         <h3 class="margin-bottom-xs">Flickr</h3>
     </div>
