--- a/templates/projects/tasks/gdocs-image.html
+++ b/templates/projects/tasks/gdocs-image.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-link">
     <h2><i class="fa fa-picture-o"></i> Image Pattern Recognition</h2>
     <h3>Re-use the Flickr Person Finder tasks</h3>
     <p><a href="{{url_for('project.import_task', short_name=project.short_name,
