--- a/templates/projects/tasks/gdocs-map.html
+++ b/templates/projects/tasks/gdocs-map.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-link">
     <h2><i class="fa fa-globe"></i>Geo-coding</h2>
     <h3>Re-use the Urban Park tasks</h3>
     <p><a href="{{url_for('project.import_task', short_name=project.short_name,
