--- a/templates/projects/tasks/gdocs-video.html
+++ b/templates/projects/tasks/gdocs-video.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-link">
     <h2><i class="fa fa-film"></i> Video Pattern Recognition</h2>
     <h3>Re-use the Vimeo tasks</h3>
     <p>
