--- a/templates/projects/importers/dropbox.html
+++ b/templates/projects/importers/dropbox.html
@@ -7,7 +7,7 @@
 {% block content %}
 {{ helper.render_loading(loading_text) }}
 <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-project-key="{{ config.get('DROPBOX_project_KEY') }}"></script>
-{{ helper.render_project_local_nav(project, 'dropboximporter', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'dropboximporter', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
