--- a/templates/projects/importers/epicollect.html
+++ b/templates/projects/importers/epicollect.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_project_local_nav(project, 'epicollectimporter', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'epicollectimporter', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
