--- a/templates/projects/importers/twitter.html
+++ b/templates/projects/importers/twitter.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
-{{ helper.render_project_local_nav(project, 'twitterimporter', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'twitterimporter', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
