--- a/templates/projects/stats.html
+++ b/templates/projects/stats.html
@@ -21,7 +21,7 @@
 <script>
     var projectStats = {{projectStats|safe}};
 </script>
-{{ helper.render_project_local_nav(project, 'stats', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'stats', current_user, pro_features, staff_or_admin) }}
 <span class="set-body-bg" data-bg="pattern-brushed"></span>
 <div class="container container-main">
     <div class="row">
