--- a/templates/projects/task_import_options.html
+++ b/templates/projects/task_import_options.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-{{ helper.render_project_local_nav(project, 'auditlog', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'auditlog', current_user, pro_features, staff_or_admin) }}
 <span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
