--- a/templates/projects/task_presenter_options.html
+++ b/templates/projects/task_presenter_options.html
@@ -3,7 +3,7 @@
 {% import "projects/_helpers.html" as helper %}
 
 {% block content %}
-{{ helper.render_project_local_nav(project, 'presenter', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'presenter', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
