--- a/templates/projects/task_priority.html
+++ b/templates/projects/task_priority.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 {% if project %}
-{{ helper.render_project_local_nav(project, 'priority', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'priority', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
