--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% if project %}
-{{ helper.render_project_local_nav(project, 'tasks', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'tasks', current_user, pro_features, staff_or_admin) }}
 <span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
