--- a/templates/projects/tasks/delete.html
+++ b/templates/projects/tasks/delete.html
@@ -4,7 +4,7 @@
 {% import "projects/_helpers.html" as helper %}
 
 {% block content %}
-{{ helper.render_project_local_nav(project, 'deletetasks', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'deletetasks', current_user, pro_features, staff_or_admin) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
