--- a/templates/projects/webhook.html
+++ b/templates/projects/webhook.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% include "projects/js/webhook.js" %}
-{{ helper.render_project_local_nav(project, 'webhook', current_user, pro_features) }}
+{{ helper.render_project_local_nav(project, 'webhook', current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
