Update project menu

--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -39,11 +39,13 @@
         <li class="divider"></li>
         <li class="nav-link"><a href="{{url_for('project.tasks', short_name=project.short_name)}}">Dashboard</a></li>
         <li class="nav-link">
-            <a href="#" id="admin-options">Import/Export Options<i class="fa fa-angle-down pull-right"></i></a>
-            <ul class="nav nav-stacked inset-shadow remove-padding-top" id="admin-menu" hidden>
-                <li class="nav-link"><a href="{{url_for('admin.index')}}">Dashboard</a></li>
-                <li class="nav-link"><a href="{{url_for('admin.featured')}}">Featured</a></li>
-                <li class="nav-link"><a href="{{url_for('admin.categories')}}">Categories</a></li>
+            <a href="#" id="import-export-menu">Import/Export Options<i class="fa fa-angle-down pull-right"></i></a>
+            <ul class="nav nav-stacked inset-shadow remove-padding-top" id="import-export-menu" hidden>
+                <li class="nav-link"><a href="{{url_for('project.import')}}">Import</a></li>
+                <li class="nav-link"><a href="{{url_for('project.export')}}">Export</a></li>
+                {% if pro_features.get('auditlog_enabled') %}
+                    <li class="nav-link"><a href="{{url_for('project.autoimporter')}}">Auto-import</a></li>
+                {% endif %}
             </ul>
         </li>
 
