--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -651,8 +651,8 @@ thead {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-    .well h3,
-    .well .h3 {
+    .well.well-link h3,
+    .well.well-link .h3 {
         font-size: 1em
     }
 }
@@ -668,7 +668,7 @@ thead {
 }
 
 @media (min-width: 992px) {
-    .well {
+    .well.well-link {
         height: 220px;
     }
     .pull-right-md {
@@ -1262,7 +1262,7 @@ h1 i, h2 i, h3 i {
 #body-content {
     height: auto;
     min-height: 100%;
-    position: relative
+    position: relative;
     padding-bottom: 100px;
 }
 
@@ -2443,6 +2443,17 @@ img.img-polaroid {
 
 /* Footer */
 
+#main-footer {
+    margin-top: 20px;
+    width: 100%;
+    bottom: 0;
+    background-color: #F9F9F9;
+    font-family: sans-serif;
+    font-size: 12px;
+    z-index: 100;
+    position: absolute;
+}
+
 #main-footer .container {
     padding-top: 20px;
     padding-bottom: 20px
@@ -2466,17 +2477,6 @@ img.img-polaroid {
 #main-footer li > a:hover {
     color: #D00000;
     text-decoration: none
-}
-
-#main-footer {
-    margin-top: 20px;
-    width: 100%;
-    bottom: 0;
-    background-color: #F9F9F9;
-    font-family: sans-serif;
-    font-size: 12px;
-    z-index: 100;
-    position: relative;
 }
 
 #main-footer ul {
