Update project side nav

--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -39,8 +39,8 @@
         <li class="divider"></li>
         <li class="nav-link"><a href="{{url_for('project.tasks', short_name=project.short_name)}}">Dashboard</a></li>
         <li class="nav-link">
-            <a href="#" id="import-export-menu">Import/Export Options<i class="fa fa-angle-down pull-right"></i></a>
-            <ul class="nav nav-stacked inset-shadow remove-padding-top" id="import-export-menu" hidden>
+            <a href="#" id="project-options">Import/Export Options<i class="fa fa-angle-down pull-right"></i></a>
+            <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
                 <li class="nav-link"><a href="{{url_for('project.import_task', short_name=project.short_name)}}">Import</a></li>
                 <li class="nav-link"><a href="{{url_for('project.export_to', short_name=project.short_name)}}">Export</a></li>
                 {% if pro_features.get('autoimporter') %}
