--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -71,6 +71,9 @@
         <li class="nav-link{% if active_link=="stats"%} active{% endif %}">
             <a href="{{url_for('project.show_stats', short_name=project.short_name)}}"> Statistics</a>
         </li>
+        <li class="nav-link{% if active_link=="contribute"%} active{% endif %}">
+            <a href="{{url_for('project.presenter', short_name=project.short_name)}}"> Contribute</a>
+        </li>
     {% endif %}
 {% elif project %}
     <li class="nav-link{% if active_link=="contribute"%} active{% endif %}">
