--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -43,7 +43,7 @@
             <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
                 <li class="nav-link"><a href="{{url_for('project.import_task', short_name=project.short_name)}}">Import</a></li>
                 <li class="nav-link"><a href="{{url_for('project.export_to', short_name=project.short_name)}}">Export</a></li>
-                {% if pro_features.get('autoimporter') %}
+                {% if pro_features.get('autoimporter_enabled') %}
                     <li class="nav-link"><a href="{{url_for('project.setup_autoimporter, short_name=project.short_name')}}">Auto-import</a></li>
                 {% endif %}
             </ul>
