Minor update to project stats page

--- a/templates/projects/stats.html
+++ b/templates/projects/stats.html
@@ -46,7 +46,7 @@
             <div id="card" class="row-fluid">
                 <div class="col-xs-12 well">
                     <h2>Average contribution time per task:</h2>
-                    <p><span id="avgTime">{{ avg_contrib_time }}</span> seconds</p>
+                    <h3><p><span id="avgTime">{{ avg_contrib_time }}</span> seconds</p></h3>
                 </div>
             </div>
             {% endif %}
