--- a/templates/projects/importers/flickr.html
+++ b/templates/projects/importers/flickr.html
@@ -33,7 +33,7 @@
             </div>
             <h3>Select an album, then click import:</h3>
             <div class="row">
-                <ul id="albums">
+                <ul id="albums" class="no-style">
                 </ul>
             </div>
             <br>
